# snap

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
src/: app.cpp  app.hpp  main.cpp  paths.cpp  paths.hpp  registry.cpp  registry.hpp  sha256.cpp  sha256.hpp
